--- a/Copy_of_CIFAR10_DL_Project_.ipynb
+++ b/Copy_of_CIFAR10_DL_Project_.ipynb
@@ -33,7 +33,7 @@
       "source": [
         "# CIFAR-10 Deep Learning Project\n",
         "**Author:** Kabina Giri  \n",
-        "**Subject6:** AI Project\n",
+        "**Subject:** AI Project\n",
         "\n",
         "## Objective:\n",
         "In this project, we implement and train **three different deep learning architectures** — a simple **Neural Network (NN)**, **AlexNet**, and **TinyVGG** — on the **CIFAR-10 dataset** using PyTorch.  \n",
